Commit on 29-06-2022[Add,edit, delete, download as PDF -Theatre]

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,5 +38,9 @@ label.form-label.required.control-label.pt-3
     font-weight: 500;
     color: black;
 }
+.modal-header{
+    background-image: linear-gradient(to right,#a31e49 10%,#342076 100%);
+    color:white;
+}
                   
 
