Commit on 14-07-2022[Code Review, Application.cfc updates]

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,3 +68,7 @@ img.img-fluid.img-poster, img.img-fluid.img-wall{
     width: 300;
     height: 100;
 }
+.error-div{
+padding-top:10rem;
+padding-bottom: 5rem;
+}
