--- a/assets/user_template/css/styles.css
+++ b/assets/user_template/css/styles.css
@@ -689,6 +689,7 @@ ul.tab_img li.last{
 }
 .featured ul {
 	margin-top: 1.5em;
+	padding-left:4rem;
 }
 .featured h4 {
 	color: white;
@@ -1107,7 +1108,7 @@ a.post-title:hover {
 }
 /*-- footer --*/
 .footer{
-	background-color:#fff;
+	/*background-color:#fff;*/
 	padding:1em;
 	  margin-top: 3em;
 	    -webkit-box-shadow: 0px 0px 12px -1px rgba(215,215,215,0.44);
@@ -1248,7 +1249,8 @@ ul.social-icons li i.fa:hover {
 .copy-rights {
 	margin-top: 3em;
   padding: 1em 0;
-  background:#3E4449;
+  /*background:#3E4449;*/
+  background: #050b35;
 }
 .copy-rights p {
 	font-size:1em;
