--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,16 +65,23 @@ button.dt-button.buttons-csv.buttons-html5 {
     padding-top:8rem;
 }
 img.img-fluid.img-poster, img.img-fluid.img-wall{
-    width: 300;
-    height: 100;
+    width: 150;
+    height: 50;
 }
 .error-div{
 padding-top:10rem;
 padding-bottom: 5rem;
 }
 
-nav.navbar.navbar-inverse.user-nav{
+nav.navbar.navbar-expand-lg.user_nav{
     background:#050b35;
+}
+a.nav-link.active{
+    background-image: linear-gradient(to right,#a31e49 10%,#342076 100%);
+    color: white;
+}
+a.nav-link{
+    color: white;
 }
 .navbar-inverse .navbar-nav>li>a{
     color:white;
@@ -102,7 +109,8 @@ text-align: center;
     font-size: 3rem;
     color: white;
     float: left;
-    padding: 1rem;}
+    
+}
     .slide-text{
         color: white;
         
@@ -113,6 +121,7 @@ text-align: center;
     }
     .sub_text{
         color: aquamarine;
+        font-weight: 600;
     }
     .b-text{
         color: white;
@@ -120,3 +129,54 @@ text-align: center;
     .subscribe_div{
         background: #443574;
     }
+    .subscribe_head{
+        font-weight: 600;
+    }
+    a.nav-link:hover{
+        color:skyblue;
+    }
+    
+
+    .carousel-inner {
+        padding: 1em;
+      }
+      .card {
+        margin: 0 0.5em;
+        box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+        border: none;
+      }
+      .carousel-control-prev,
+      .carousel-control-next {
+        background-color: #e1e1e1;
+        width: 6vh;
+        height: 6vh;
+        border-radius: 50%;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+      @media (min-width: 768px) {
+        .carousel-item {
+          margin-right: 0;
+          flex: 0 0 33.333333%;
+          display: block;
+        }
+        .carousel-inner {
+          display: flex;
+        }
+      }
+      .card .img-wrapper {
+          max-width: 100%;
+          height: 13em;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+      }
+      .card img {
+          max-height: 100%;
+          height:200;
+      }
+      @media (max-width: 767px) {
+        .card .img-wrapper {
+          height: 17em;
+        }
+      }
