--- a/assets/user_template/css/styles.css
+++ b/assets/user_template/css/styles.css
@@ -55,11 +55,17 @@ label{
 	text-decoration:none;
 	font-family: 'Oxygen', sans-serif;
 }
+.footer-brand{
+	float: left;	
+	margin: 1.5rem;
+    padding: 0.12rem;
+    background-image: linear-gradient(to right,#a31e49 10%,#342076 100%);
+}
 .main-content {
 	/*background: #fff;
 	margin-top: 4.2em;*/
 	background: #003B64;
-	padding-bottom: 2em;
+	/*padding-bottom: 2em;*/
 	  -webkit-box-shadow: 0px 0px 12px -1px rgba(215,215,215,0.44);
   -moz-box-shadow: 0px 0px 12px -1px rgba(215,215,215,0.44);
   box-shadow: 0px 0px 12px -1px rgba(215,215,215,0.44);
@@ -1166,6 +1172,8 @@ h5.f-head {
 }
 .follow-us ul {
 	margin-top: 1em;
+	padding: 1rem;
+    float: right;
 }
 ul.social-icons li {
 	display:inline-block;
@@ -1185,8 +1193,8 @@ ul.social-icons li i.fa:hover {
 	margin: 1.5em 0;
 }
 .follow-us {
-    float: left;
-	width:28.333%;
+    float: right;
+	width:100%;
 }
 .subscribe{
 	float:left;
