List out User, Delete User, Logout, seat selection

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,5 +349,8 @@ img.img-fluid.scroll_image{
       float: right;
     }
 .seat_label{
-  float:right;
-}
+  float:right;}
+
+  .dt_div{
+background: #050b35;
+  }
