--- a/assets/user_template/seat/css/style.css
+++ b/assets/user_template/seat/css/style.css
@@ -1052,7 +1052,7 @@
   }
   .ticket .ticket__item {
     display: block;
-    margin-bottom: 10px;
+   /* margin-bottom: 10px;*/
     font-family: 'PT Mono';
     font-size: 14px;
     text-transform: uppercase;
@@ -1072,8 +1072,9 @@
   }
   .ticket .ticket__film {
     border-bottom: 1px solid black;
-    padding-bottom: 44px;
-    margin-bottom: 28px;
+    /*padding-bottom: 44px;*/
+    /*margin-bottom: 28px;*/
+    margin-bottom: 0.5rem;
   }
   .ticket .ticket__movie {
     text-transform: none;
